[project]
name = "gm-curation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "google-generativeai>=0.8.5",
    "markdown>=3.10",
    "mypy>=1.19.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.7",
    "tweepy>=4.16.0",
]
